Linting hint fix